fix(admin): paginate post index loading
